[gd_scene load_steps=31 format=2]

[ext_resource path="res://art sets/Enemies/No Outlines/enemies x3.png" type="Texture" id=1]
[ext_resource path="res://Mobs/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mobs/ArmRobot/ArmRobot.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 576, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 672, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 864, 96, 96 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 864, 96, 96 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 864, 96, 96 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 864, 96, 96 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 768, 96, 96 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 768, 96, 96 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 768, 96, 96 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 768, 96, 96 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 960, 96, 96 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 960, 96, 96 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 960, 96, 96 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 960, 96, 96 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 960, 96, 96 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 960, 96, 96 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 576, 960, 96, 96 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 672, 960, 96, 96 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 39.5, 36 )

[sub_resource type="CircleShape2D" id=27]
radius = 287.016

[node name="ArmRobot" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 25 )
animation = "idle"

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( -3.5, -1 )
shape = SubResource( 26 )

[node name="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( -1, 0 )
shape = SubResource( 27 )

[connection signal="ready" from="." to="." method="_on_ArmRobot_ready"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]
